# LumiThreadDivergence

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PHASE2_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SPECIFICATION.md  build_push_container.sh  generate_scene_batch.sh  generate_scenes.py  profile_branch_divergence.sh  scene.yaml  scene_mesh.yaml  scene_neural.yaml  test_python_kernel.py
.devcontainer/: DOCKER_USAGE.md  Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.devcontainer/docker/: README.md
.devcontainer/gcp/: devcontainer.json  gcp_startup_script.sh
.devcontainer/local/: Dockerfile  devcontainer.json
docs/: DEBUGGING_CUDA.md  DEBUG_FINDINGS.md  HALF_PRECISION_DEBUG.md  HIPRT_ARCHITECTURE.md  MEMORY_CORRUPTION_FIX.md  MEMORY_CORRUPTION_FOUND.md  PHASE2_TODO.md  README_SCENE_GENERATOR.md  TODO_SCENE_CAMERA.md  WARP_EFFICIENCY_ANALYSIS.md  nsight_profiling.md  pytorch_compatibility.md  weight_format.md  weight_loading_changes.md  weight_loading_implementation.md
include/: vertex.h
programs/: CMakeLists.txt  common.h  divergence_profiling.cuh  lighting.cuh  miss.cu  neural_inference.cuh  neural_programs.cu  neural_types.h  raygen.cu  triangle_programs.cu
scenes/: scene_mesh_1.yaml  scene_mesh_16.yaml  scene_mesh_2.yaml  scene_mesh_32.yaml  scene_mesh_4.yaml  scene_mesh_64.yaml  scene_mesh_8.yaml  scene_neural_1.yaml  scene_neural_16.yaml  scene_neural_2.yaml  scene_neural_32.yaml  scene_neural_4.yaml  scene_neural_64.yaml  scene_neural_8.yaml  test_wall_floor_original_cam.yaml  test_wall_only.yaml  test_wall_original_cam.yaml
scripts/: analyze_divergence.py  compare_hit_positions.py  convert_checkpoint.py  create_test_checkpoint.py  parse_ncu_cuda_sass.py  parse_ncu_source.py
src/: main.cpp  main_hiprt.cpp
src/hiprt/: CMakeLists.txt  geometry_builder.cpp  geometry_builder.h  hiprt_context.cpp  hiprt_context.h  kernel_compiler.cpp  kernel_compiler.h  kernel_source.h  scene_builder.cpp  scene_builder.h  test_custom_intersection.cpp  test_geometry.cpp  test_hiprt.cpp  test_kernel.cpp  test_mixed_geometry.cpp  test_neural_kernel.cpp  test_scene.cpp  test_two_planes.cpp  test_wall_intersection.cpp  traversal_metrics.h
src/neural/: CMakeLists.txt  config.cpp  config.h  network.cpp  network.h  network_kernels.cu  network_kernels.h  test_mlp_inference.cpp  weight_loader.cpp  weight_loader.h
src/optix/: CMakeLists.txt  context.cpp  context.h  geometry.cpp  geometry.h  neural_params.cpp  neural_params.h  optix_stubs.cpp  pipeline.cpp  pipeline.h  sbt.cpp  sbt.h  tlas_builder.cpp  tlas_builder.h  triangle_geometry.cpp  triangle_geometry.h
src/utils/: cuda_utils.h  debug_utils.cu  debug_utils.h  error.h
tests/: CMakeLists.txt  neural_proxy_predictions.h  test_network.cu  test_optix_encodings.cu  test_optix_network.cu  test_optix_ppm_input.cu  test_tcnn_ppm_input.cu
